--- a/trunk/res/layout/main.xml
+++ b/trunk/res/layout/main.xml
@@ -5,5 +5,5 @@
     android:layout_height="fill_parent"
     >
 
-<ListView android:id="@+id/listview" android:layout_height="fill_parent" android:layout_width="fill_parent"></ListView>
+<ListView android:id="@android:id/list" android:layout_height="fill_parent" android:layout_width="fill_parent"  style="@style/XynotecTheme"></ListView>
 </LinearLayout>
