--- a/trunk/res/values/styles.xml
+++ b/trunk/res/values/styles.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
     <style name="XynotecTheme" parent="@android:style/Theme.Light">
-        <!--item name="android:windowTitleSize">24.0dip</item>
+        <item name="android:windowTitleSize">24.0dip</item>
         <item name="android:windowTitleStyle">@style/window_title_style</item>
         <item name="android:windowTitleBackgroundStyle">@style/window_title_background</item>
         <item name="android:tabWidgetStyle">@style/tab_widget_appearance</item>
-        <item name="android:listSelector">@drawable/list_selected</item-->
+        <item name="android:listSelector">@drawable/list_selected</item>
     </style>
     <style name="XynotecTheme.NoTitleBar" parent="@android:style/Theme.Light">
         <item name="android:windowNoTitle">true</item>
